--- a/app/views/customs/_create_table_fields.html.erb
+++ b/app/views/customs/_create_table_fields.html.erb
@@ -1,4 +1,4 @@
-<% values = current_login.dropdown_values.where("custom_id=?",custom.id).order("created_at") %>
+<%# values = current_login.dropdown_values.where("custom_id=?",custom.id).order("created_at") %>
 <style>
   input.small_row{
     margin: 0;
@@ -32,7 +32,7 @@
 
 <table class ="table-striped">
   <% if params[:controller]=="customs" && (params[:action]=="new" || params[:action]=="edit_table_heading" || params[:action] == "update_heading") %>
-    <% value = current_login.dropdown_values.where("custom_id=?",custom.id).order("created_at").first %>
+    <% value = current_login.customs.find(custom.id) %>
     <tr class="bold_me" onclick="edit_table_heading(<%= value.id %>)" id="tr_<%= value.id %>">
       <% value.drop_value.split(',').each do |row| %>
         <td><%= row %></td>
@@ -43,11 +43,29 @@
       <%= render :partial => '/customs/update_table_heading', :locals => {:custom => custom} %>
     </tr>
   <% else %>
-    <% values = current_login.dropdown_values.where("custom_id=?",custom.id).order("created_at") %>
+    <% value = current_login.customs.find(custom.id) %>
+    <tr class="bold_me">
+      <% value.drop_value.split(',').each do |row| %>
+        <td><%= row %></td>
+      <% end %>
+      <td colspan="2"></td>
+    </tr>
+
+    <%
+    if params[:type] == "Job"
+      values = current_login.dropdown_values.where("custom_id=? AND job_id=?",custom.id, session[:job_id]).order("created_at")
+    else
+      if session[:jobsite_id].present? && session[:jobsite_id] != nil && session[:jobsite_id] != "All" && session[:jobsite_id] != "None"
+        values = current_login.dropdown_values.where("custom_id=? AND jobsite_id=? AND customer_id=?",custom.id, session[:jobsite_id], session[:customer_id]).order("created_at")
+      else
+        values = current_login.dropdown_values.where("custom_id=? and customer_id=?",custom.id, session[:customer_id]).order("created_at")
+      end
+    end
+  %>
+  <%# values = current_login.dropdown_values.where("custom_id=? and customer_id=?", custom.id, session[:customer_id]).order("created_at") %>
     <% values.each do |value| %>
       <tr class="bold_me"
-      <% first_value = current_login.dropdown_values.where("custom_id=?",custom.id).order("created_at").first %>
-          onclick="edit_row_values(<%= (value.id == first_value.id) ? '' : value.id %>)"
+          onclick="edit_row_values(<%= value.id %>, '<%=  params[:type] %>')"
           id="tr_<%= value.id %>">
             <% value.drop_value.split(',').each do |row| %>
           <td><%= row %></td>
@@ -83,12 +101,13 @@
     });
   }
 
-  function edit_row_values(value_id) {
+  function edit_row_values(value_id, type) {
     $.ajax({
       url: '/customs/edit_table',
       data: {
         id: value_id,
-        tab:<%= params[:tab] %>
+        tab:<%= params[:tab] %>,
+        type: type
       },
       type: 'GET',
       dataType: 'script',
