--- a/app/views/customs/_table_fields.html.erb
+++ b/app/views/customs/_table_fields.html.erb
@@ -11,15 +11,15 @@
 <td><%= text_field_tag :fields_11, nil, :class => "small_row", :value => @values ? @values[10] : '', :placeholder => "value" %></td>
 <td colspan="2" style="width:50px">
   <% if @values %>
-    <%= link_to_function "Update".html_safe, "update_rows(#{@dropdown_value.id});", :class => "btn btn-mini btn-primary", :style => "color:white", :id => "update-btn" %>
+    <%= link_to_function "Update".html_safe, "update_rows(#{@dropdown_value.id}, '#{params[:type]}');", :class => "btn btn-mini btn-primary", :style => "color:white", :id => "update-btn" %>
   <% else %>
-    <%= link_to_function "Add", "display_row(#{custom.id});", :id => "add-btn", :class => "btn btn-mini btn-primary", :style => "color:white" %>
+    <%= link_to_function "Add", "display_row(#{custom.id}, '#{params[:type]}');", :id => "add-btn", :class => "btn btn-mini btn-primary", :style => "color:white" %>
   <% end %>
 </td>
 
 
 <script>
-  function display_row(custom_id) {
+  function display_row(custom_id, type) {
     var datas = new Array();
     for (var i = 0; i < 11; i++) {
       val = document.getElementById("fields_" + (i + 1)).value;
@@ -32,7 +32,8 @@
       data: {
         custom_id: custom_id,
         drop_value: fields,
-        tab:<%= params[:tab] %>
+        tab:<%= params[:tab] %>,
+        type: type
       },
       type: 'POST',
       dataType: 'script',
@@ -42,7 +43,7 @@
   }
 
 
-  function update_rows(id) {
+  function update_rows(id, type) {
     var datas = new Array();
     for(var i=0; i<11; i++){
       value = document.getElementById("fields_"+(i+1)).value;
@@ -54,7 +55,8 @@
       url: '/customs/' + id + '/update_table',
       data: {
         drop_value: fields,
-        tab:<%= params[:tab] %>
+        tab:<%= params[:tab] %>,
+        type: type
       },
       type: 'PUT',
       dataType: 'script',
